Add file encryption workflow with JFileChooser and CryptoUtils integration